--- a/ServiceStack.Examples/ServiceStack.Examples.Host.Web/ServiceStack.Examples.Host.Web.csproj
+++ b/ServiceStack.Examples/ServiceStack.Examples.Host.Web/ServiceStack.Examples.Host.Web.csproj
@@ -66,7 +66,7 @@
     <Reference Include="System.Web.Mobile" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="AjaxClient\AjaxStack.snippets.js" />
+    <Content Include="AjaxClient\ServiceStack.js" />
     <Content Include="AjaxClient\jquery-1.4.2.min.js" />
     <Content Include="AjaxClient\jquery.json-2.2.js" />
     <Content Include="Default.aspx" />
