--- a/trunk/Common/ServiceStack.Common/ServiceStack.WebHost.Endpoints/ServiceStack.WebHost.Endpoints.csproj
+++ b/trunk/Common/ServiceStack.Common/ServiceStack.WebHost.Endpoints/ServiceStack.WebHost.Endpoints.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.30729</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{680A1709-25EB-4D52-A87F-EE03FFD94BAA}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -84,6 +84,7 @@
     <Compile Include="Support\ContentType.cs" />
     <Compile Include="Support\JsvHandlerBase.cs" />
     <Compile Include="Support\GzipOptimizationTest.cs" />
+    <Compile Include="SoapSyncReplyHttpHandler.cs" />
     <Compile Include="XmlSyncReplyHttpListener.cs" />
     <Compile Include="ServiceEndpointsMetadataConfig.cs" />
     <Compile Include="Metadata\Soap12WsdlMetadataHandler.cs" />
